// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h4>
    Viewing 21 expenses totalling $7,823.64
  </h4>
</div>
`;

exports[`should render ExpensesSummary with one expense 1`] = `
<div>
  <h4>
    Viewing 1 expense totalling $10.24
  </h4>
</div>
`;
